--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -20,7 +20,7 @@ Ecology workshop
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>Morning</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/03-dplyr.html">tidyverse Part II</a></td></tr>
-      <tr> <td>Afternoon</td><td><a href=https://datacarpentry.org/R-ecology-lesson/04-visualization-ggplot2.html">Visualization with ggplot2</a></td></tr>
+      <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/R-ecology-lesson/04-visualization-ggplot2.html">Visualization with ggplot2</a></td></tr>
       <tr>
 	<td>Evening</td>
 	<td><a href="{{ site.dc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
