--- a/_includes/dc/syllabus.html
+++ b/_includes/dc/syllabus.html
@@ -10,6 +10,7 @@
       <li><a href="http://www.datacarpentry.org/spreadsheet-ecology-lesson/05-exporting-data/">Exporting Data</a></li>
     </ul>
   </div>
+  <!--
   <div class="col-md-6">
     <h3 id="syllabus-ecology-openrefine">Data Cleaning with OpenRefine</h3>
     <ul>
@@ -21,15 +22,22 @@
       <li><a href="http://www.datacarpentry.org/OpenRefine-ecology-lesson/05-save-export/">Exporting Data</a></li>
       <li><a href="http://www.datacarpentry.org/OpenRefine-ecology-lesson/06-resources/">Other Resources</a></li>    </ul>
   </div>
+-->
   <div class="col-md-6">
     <h3 id="syllabus-ecology-r">Introduction to R</h3>
     <ul>
       <li><a href="http://www.datacarpentry.org/R-ecology-lesson/00-before-we-start.html">Overview of R and RStudio</a></li>
       <li><a href="http://www.datacarpentry.org/R-ecology-lesson/01-intro-to-r.html">Introduction to R</a></li>
       <li><a href="http://www.datacarpentry.org/R-ecology-lesson/02-starting-with-data.html">Starting with Data</a></li>
+  <div class="col-md-6">
+    <h3 id="syllabus-ecology-r">tidyverse</h3>
+    <ul>
       <li><a href="http://www.datacarpentry.org/R-ecology-lesson/03-dplyr.html">Manipulating Data Frames with <code>dplyr</code></a></li>
+  <div class="col-md-6">
+    <h3 id="syllabus-ecology-r">Visualization with ggplot2</h3>
+    <ul>
       <li><a href="http://www.datacarpentry.org/R-ecology-lesson/04-visualization-ggplot2.html">Data Visualisation with <code>ggplot2</code></a></li>
-      <li><a href="http://www.datacarpentry.org/R-ecology-lesson/05-r-and-databases.html">Interacting with Databases with <code>dbplyr</code></a></li>
+      <li><a href="http://www.datacarpentry.org/R-ecology-lesson/05-r-and-databases.html">Extra: Interacting with Databases with <code>dbplyr</code></a></li>
     </ul>
   </div>
 <!--
@@ -47,7 +55,7 @@
       <li><a href="https://datacarpentry.org/python-ecology-lesson/09-working-with-sql/index.html">Interacting with Databases with <code>pandas</code></a></li>
     </ul>
   </div>
--->
+
   <div class="col-md-6">
     <h3 id="syllabus-ecology-sql">Data Management with SQL</h3>
     <ul>
@@ -57,7 +65,7 @@
       <li><a href="https://datacarpentry.org/sql-ecology-lesson/03-sql-joins/index.html">Joins</a></li>
     </ul>
   </div>
-
+-->
 <!--
   <div class="col-md-6">
     <h3 id="syllabus-genomics-project">Project Organization and Management</h3>
