--- a/_includes/dc/syllabus.html
+++ b/_includes/dc/syllabus.html
@@ -29,6 +29,7 @@
       <li><a href="http://www.datacarpentry.org/R-ecology-lesson/00-before-we-start.html">Overview of R and RStudio</a></li>
       <li><a href="http://www.datacarpentry.org/R-ecology-lesson/01-intro-to-r.html">Introduction to R</a></li>
       <li><a href="http://www.datacarpentry.org/R-ecology-lesson/02-starting-with-data.html">Starting with Data</a></li>
+  <div class="row">
   <div class="col-md-6">
     <h3 id="syllabus-ecology-r">tidyverse</h3>
     <ul>
